force-app/force-app/force-app/main/default/objects/Stencil_Reference__c/Stencil_Reference__c.object-meta.xml
<CustomObject>
    <label>Stencil Reference</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Stencil Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stencil References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>