force-app/force-app/force-app/main/default/objects/Stencil_Reference__c/fields/Complaints_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Complaints_Tracker__c</fullName>
    <label>Complaints Tracker</label>
    <referenceTo>Complaints_Tracker__c</referenceTo>
    <relationshipLabel>Stencil References</relationshipLabel>
    <relationshipName>Stencil_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>