force-app/force-app/force-app/main/default/objects/Stencil_Reference__c/fields/FOC__c.field-meta.xml
<CustomField>
    <fullName>FOC__c</fullName>
    <label>FOC Despatched Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>