force-app/force-app/force-app/main/default/objects/Stencil_Reference__c/fields/Sap_Product__c.field-meta.xml
<CustomField>
    <fullName>Sap_Product__c</fullName>
    <label>Sap Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>