force-app/force-app/force-app/main/default/objects/Stencil_Reference__c/fields/Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size__c</fullName>
    <formula>TEXT( Product__r.Size__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Size</label>
    <type>Text</type>
</CustomField>